--- a/src/pages/location/location.component.html
+++ b/src/pages/location/location.component.html
@@ -1,13 +1,7 @@
-<p>location works!</p>
-
-<div style="width: 900px;">
-    <ag-grid-angular 
-        #agGrid 
-        style="width: 100%; height: 300px"     
-        id="myGrid"
-        [enableSorting]="true" 
-        class="ag-theme-balham"
-        [gridOptions]="gridOptions"
+<ag-grid-angular
+    style="height: 500px;"
+    class="ag-theme-balham"
+    [rowData]="rowData | async"
+    [columnDefs]="columnDefs"
     >
-    </ag-grid-angular>
-</div>
+</ag-grid-angular>
