improved ag-grid table UI

--- a/src/pages/location/location.component.scss
+++ b/src/pages/location/location.component.scss
@@ -1,3 +1,17 @@
+.filter-btn {
+  margin-right: 5px;
+}
+
 mat-form-field {
-    margin-right: 12px;
-  }
+  margin-right: 12px;
+}
+
+.mat-card-content-custom {
+  width: 750px;
+  margin-bottom: 10px;
+}
+
+.ag-theme-balham {
+  width: 782px; 
+  height: 500px;
+}
