--- a/src/pages/location/location.component.html
+++ b/src/pages/location/location.component.html
@@ -1,20 +1,21 @@
+<mat-card mat-card-content class="mat-card-content-custom">
+    <mat-form-field>
+        <input matInput [matDatepicker]="picker1" placeholder="Angular forms" [formControl]="dateFilter1">
+        <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+        <mat-datepicker #picker1></mat-datepicker>
+    </mat-form-field>
+    
+    <mat-form-field>
+        <input matInput [matDatepicker]="picker2" placeholder="Angular forms" [formControl]="dateFilter2">
+        <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+        <mat-datepicker #picker2></mat-datepicker>
+    </mat-form-field>
+    
+    <button mat-button mat-raised-button class="filter-btn" color="primary" (click)="sortByDateRange()">Filter</button>
+    <button mat-button mat-raised-button class="reset-btn" color="warn" (click)="resetRawData()">Reset</button>
+</mat-card>
 
-<mat-form-field>
-    <input matInput [matDatepicker]="picker1" placeholder="Angular forms" [formControl]="dateFilter1">
-    <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-    <mat-datepicker #picker1></mat-datepicker>
-</mat-form-field>
-
-<mat-form-field>
-    <input matInput [matDatepicker]="picker2" placeholder="Angular forms" [formControl]="dateFilter2">
-    <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-    <mat-datepicker #picker2></mat-datepicker>
-</mat-form-field>
-
-<button (click)="sortByDateRange()">Filter</button>
-<button (click)="resetRawData()">Reset</button>
 <ag-grid-angular
-    style="width: 782px; height: 500px;"
     class="ag-theme-balham"
     [rowData]="rowData"
     [columnDefs]="columnDefs"
