--- a/src/app/pages/location/location.component.html
+++ b/src/app/pages/location/location.component.html
@@ -31,12 +31,51 @@
     </button>
 </mat-card>
 
-<ag-grid-angular
-    class="ag-theme-balham"
-    [rowData]="rowData"
-    [columnDefs]="columnDefs"
-    [enableSorting]="true" 
-    [animateRows]="true"
-    [pagination]="true"
->
-</ag-grid-angular>
+<mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+
+<div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort>
+  
+        <!-- City Column -->
+        <ng-container matColumnDef="city">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> City </th>
+            <td mat-cell *matCellDef="let element"> {{element.city}} </td>
+        </ng-container>
+
+        <!-- Start date Column -->
+        <ng-container matColumnDef="start_date">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Start date </th>
+            <td mat-cell *matCellDef="let element"> {{element.start_date}} </td>
+        </ng-container>
+
+        <!-- End date Column -->
+        <ng-container matColumnDef="end_date">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> End date </th>
+            <td mat-cell *matCellDef="let element"> {{element.end_date}} </td>
+        </ng-container>
+
+        <!-- Price Column -->
+        <ng-container matColumnDef="price">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
+            <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+        </ng-container>
+
+        <!-- Status Column -->
+        <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+            <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+        </ng-container>
+
+        <!-- Color Column -->
+        <ng-container matColumnDef="color">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Color </th>
+            <td mat-cell *matCellDef="let element"> {{element.color}} </td>
+        </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+      </tr>
+    </table>
+  
+<!-- <mat-paginator [length]="resultsLength" [pageSize]="10"></mat-paginator> -->
+<mat-paginator [length]="resultsLength" [pageSize]="10" showFirstLastButtons></mat-paginator>
+  </div>
