Fixed Location table sorting bug

--- a/src/app/pages/location/location.component.scss
+++ b/src/app/pages/location/location.component.scss
@@ -69,3 +69,13 @@ mat-spinner {
   width: 550px;
   margin: auto;
 }
+
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.example-full-width {
+  width: 100%;
+}
