--- a/src/app/pages/location/location.component.html
+++ b/src/app/pages/location/location.component.html
@@ -1,13 +1,11 @@
 <mat-card mat-card-content class="mat-card-content-custom">
-    From: 
     <mat-form-field>
-        <input matInput [matDatepicker]="picker1" placeholder="Angular forms" [formControl]="dateFilter1">
+        <input matInput [matDatepicker]="picker1" placeholder="From" [formControl]="dateFilter1">
         <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
         <mat-datepicker #picker1></mat-datepicker>
     </mat-form-field>
-    To: 
     <mat-form-field>
-        <input matInput [matDatepicker]="picker2" placeholder="Angular forms" [formControl]="dateFilter2">
+        <input matInput [matDatepicker]="picker2" placeholder="To" [formControl]="dateFilter2">
         <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
         <mat-datepicker #picker2></mat-datepicker>
     </mat-form-field>
@@ -71,11 +69,11 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Color </th>
             <td mat-cell *matCellDef="let element"> {{element.color}} </td>
         </ng-container>
+        
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;">
       </tr>
     </table>
-  
-<!-- <mat-paginator [length]="resultsLength" [pageSize]="10"></mat-paginator> -->
-<mat-paginator [length]="resultsLength" [pageSize]="10" showFirstLastButtons></mat-paginator>
+    
+    <mat-paginator [length]="resultsLength" [pageSize]="10" showFirstLastButtons></mat-paginator>
   </div>
